<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit_team"
        android:title="@string/edit_team"
        android:visible="false"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/add_member"
        android:title="@string/add_member"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/delete_team"
        android:title="@string/delete_team"
        android:visible="false"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/exit_team"
        android:title="@string/exit_from_this_team"
        android:visible="false"
        app:showAsAction="collapseActionView" />

</menu>