<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:customui="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/dp_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/flag_match_top_color"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/fragment_match_flag_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/dp_15"
                        android:contentDescription="@string/flag_match"
                        android:src="@drawable/ic_flag_warning" />

                    <ImageView
                        android:id="@+id/fragment_match_flag_iv_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/flag_match"
                        android:padding="@dimen/dp_10"
                        android:src="@drawable/ic_match_flag_back"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/fragment_match_flag_iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/flag_match"
                        android:padding="@dimen/dp_10"
                        android:src="@drawable/ic_close_white"
                        android:visibility="gone" />

                </RelativeLayout>

                <com.ontro.customui.LightTextView
                    android:id="@+id/fragment_match_flag_tv_dialog_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="@string/apologise_for_inconvenience"
                    android:textSize="@dimen/dp_16"
                    customui:light="roboto_light.ttf" />

                <com.ontro.customui.LightTextView
                    android:id="@+id/fragment_match_flag_tv_dialog_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/white_50"
                    android:text="@string/help_us_understand_the_situation_better"
                    android:textSize="@dimen/dp_10"
                    android:paddingBottom="@dimen/dp_20"
                    customui:light="roboto_light.ttf" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fragment_match_flag_ll_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/app_background_color"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/fragment_match_flag_ll_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <com.ontro.customui.RegularTextView
                        android:id="@+id/fragment_match_flag_tv_false_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/false_scores_submitted"
                        android:textColor="@color/white"
                        android:padding="@dimen/dp_16"
                        android:textSize="@dimen/dp_15"
                        customui:medium="roboto_regular.ttf" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="#283038"/>

                    <com.ontro.customui.RegularTextView
                        android:id="@+id/fragment_match_flag_tv_not_turn_up"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/player_team_didn_t_turn_up"
                        android:textColor="@color/white"
                        android:padding="@dimen/dp_16"
                        android:textSize="@dimen/dp_15"
                        customui:medium="roboto_regular.ttf" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="#283038"/>

                    <com.ontro.customui.RegularTextView
                        android:id="@+id/fragment_match_flag_tv_offensive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/offensive_conduct_during_match"
                        android:textColor="@color/white"
                        android:padding="@dimen/dp_16"
                        android:textSize="@dimen/dp_15"
                        customui:medium="roboto_regular.ttf" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:background="#283038"/>

                    <com.ontro.customui.RegularTextView
                        android:id="@+id/fragment_match_flag_tv_others"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_16"
                        android:text="@string/others"
                        android:textColor="@color/white"
                        android:textSize="@dimen/dp_15"
                        customui:medium="roboto_regular.ttf" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/fragment_match_flag_ll_reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/fragment_match_flag_et_reason"
                        style="@android:style/TextAppearance.DeviceDefault.Small"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_160"
                        android:gravity="top"
                        android:hint="@string/type_your_message"
                        android:inputType="textCapSentences|textMultiLine"
                        android:paddingTop="@dimen/dp_7"
                        android:paddingBottom="@dimen/dp_7"
                        android:paddingRight="@dimen/dp_16"
                        android:paddingLeft="@dimen/dp_16"
                        android:textColor="@color/white"
                        android:background="@android:color/transparent"
                        android:textColorHint="@color/hint_color"
                        android:textCursorDrawable="@null"
                        android:maxLines="10"
                        android:textSize="@dimen/dp_13"/>

                    <Button
                        android:layout_below="@+id/fragment_match_flag_et_reason"
                        android:id="@+id/fragment_match_flag_btn_flag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@color/dark_green"
                        android:gravity="center"
                        android:text="@string/flag"
                        android:textSize="@dimen/dp_14"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>